syntax = "proto3";

// generate directly into "java/proto"
option java_package = "proto";


message LookupRequest {
  string targetId = 1;
  Type type = 2;

  enum Type {
    JOIN = 0;
  }
}

message LookupResponse {
  repeated NodeReference kClosest = 1;
}

message NodeReference {
  string ip = 1;
  int32 port = 2;
}


message Empty {}

service KademliaService {
  rpc NodeLookup(LookupRequest) returns (LookupResponse) {}
  rpc Ping(Empty) returns (Empty) {}
}